# PtrHash

./: .gitignore  Cargo.toml  justfile  readme.md
data/: bucket_fn_stats_l35.json  bucket_fn_stats_l40.json  comparison_3e8.txt  query_batching.json  query_throughput.json  remap.json  sharding_hybrid.json  sharding_memory.json  size.json  slots_per_part.json  string_queries.json
examples/: epserde.rs  epserde.rs_  evals.rs  evals.rs_  many_keys.rs
src/: bucket_fn.rs  build.rs  evict.rs  fastmod.rs  hash.rs  lib.rs  pack.rs  reduce.rs  shard.rs  sort_buckets.rs  stats.rs  test.rs  util.rs
